--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section class="connection-flow">
         <div class="container">
             <h2 class="section-title">Como Funciona a Conexão Green</h2>
-            <p class="affiliate-disclaimer">Um processo simples e eficiente para você economizar:</p>
+           
             <div class="flow-steps">
                 <div class="flow-step">
                     <div class="flow-icon">
@@ -217,9 +217,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 - Página de afiliado independente. iGreen Energy é uma marca registrada de sua respectiva empresa.</p>
-            </div>
+            <p>&copy; 2025 - Página de afiliado independente desenvolvida por Otávio Malta. 
+                    <a href="https://github.com/OtavioMalta" target="_blank">GitHub</a> 
+            </p>
         </div>
     </footer>
 
